# climate-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_document_chunks.py  003_nullable_country_id_global_metrics.py
app/: config.py  main.py
app/api/: climate.py  countries.py  globe.py  health.py  qa.py  router.py
app/db/: session.py
app/models/: __init__.py  climate_data.py  country.py  document_chunk.py  source_document.py
app/schemas/: country.py
app/services/: rag.py
docs/: spec.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts
frontend/src/components/: ChatBox.tsx  ClimateChart.tsx  CompareBar.tsx  CountryPanel.tsx  Globe.tsx  Legend.tsx
scripts/: embed.py  embed_climate.py  seed.py  seed_docs.py  seed_extended.py
tests/: conftest.py  test_climate.py  test_countries.py  test_globe.py  test_health.py
